--- a/package.json
+++ b/package.json
@@ -10,8 +10,21 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@walletconnect/web3-provider": "^1.8.0",
+    "@web3auth/web3auth": "^2.1.3",
+    "magic-sdk": "^13.4.0",
+    "moralis": "^2.14.2",
+    "moralis-v1": "^1.12.0",
     "next": "13.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-moralis": "^1.4.2",
+    "web3uikit": "^1.0.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.4",
+    "tailwindcss": "^3.2.7"
   }
 }
